crates/review-buddy/tests/snapshots/frames_v02__frame_first_run_2_connect_no_color_100x30.snap
---
source: crates/review-buddy/tests/frames_v02.rs
expression: plain_dump(& mut app)
---
 review buddy  ·  first run                                                              Liminal HQ









           ╭ 1 · Connect your sources ──────────────────────────────────────────────────╮
           │ space picks a row · ⏎ continues · a row with no credentials asks for a     │
           │ token                                                                      │
           │                                                                            │
           │ › [x] ✓ GH github.com  signed in as smorris via gh · 2 orgs                │
           │   [ ] ○ GL gitlab.work.ca  found in your git config, no credentials yet…   │
           │                                                                            │
           │ [ Back ]  [ Continue ⏎ ]  [ Skip for now · esc ]                           │
           ╰────────────────────────────────────────────────────────────────────────────╯










 ⏎ continue  ← → buttons  ⌫ back  space pick  esc skip for now

-- modifiers --
0:1 B "review buddy"
0:13 D "  ·  first run"
0:88 D " Liminal HQ"
10:11 B "╭ 1 · Connect your sources ──────────────────────────────────────────────────╮"
11:11 B "│"
11:13 D "space picks a row · ⏎ continues · a row with no credentials asks for a"
11:88 B "│"
12:11 B "│"
12:13 D "token"
12:88 B "│"
13:11 B "│"
13:88 B "│"
14:11 B "│"
14:13 BR "›"
14:15 R "[x] ✓"
14:21 DR "GH"
14:24 BR "github.com"
14:34 DR "  signed in as smorris via gh · 2 orgs"
14:88 B "│"
15:11 B "│"
15:13 B ""
15:19 D "○ GL"
15:24 B "gitlab.work.ca"
15:38 D "  found in your git config, no credentials yet…"
15:88 B "│"
16:11 B "│"
16:88 B "│"
17:11 B "│"
17:13 D "[ Back ]"
17:23 B "[ Continue ⏎ ]"
17:39 D "[ Skip for now · esc ]"
17:88 B "│"
18:11 B "╰────────────────────────────────────────────────────────────────────────────╯"
29:1 B "⏎"
29:2 D " continue"
29:13 B "← →"
29:16 D " buttons"
29:26 B "⌫"
29:27 D " back"
29:34 B "space"
29:39 D " pick"
29:46 B "esc"
29:49 D " skip for now"
