crates/review-buddy/tests/snapshots/frames_v02__frame_first_run_2_connect_no_color_160x40.snap
---
source: crates/review-buddy/tests/frames_v02.rs
expression: plain_dump(& mut app)
---
 review buddy  ·  first run                                                                                                                          Liminal HQ














                                         ╭ 1 · Connect your sources ──────────────────────────────────────────────────╮
                                         │ space picks a row · ⏎ continues · a row with no credentials asks for a     │
                                         │ token                                                                      │
                                         │                                                                            │
                                         │ › [x] ✓ GH github.com  signed in as smorris via gh · 2 orgs                │
                                         │   [ ] ○ GL gitlab.work.ca  found in your git config, no credentials yet…   │
                                         │                                                                            │
                                         │ [ Back ]  [ Continue ⏎ ]  [ Skip for now · esc ]                           │
                                         ╰────────────────────────────────────────────────────────────────────────────╯















 ⏎ continue  ← → buttons  ⌫ back  space pick  esc skip for now

-- modifiers --
0:1 B "review buddy"
0:13 D "  ·  first run"
0:148 D " Liminal HQ"
15:41 B "╭ 1 · Connect your sources ──────────────────────────────────────────────────╮"
16:41 B "│"
16:43 D "space picks a row · ⏎ continues · a row with no credentials asks for a"
16:118 B "│"
17:41 B "│"
17:43 D "token"
17:118 B "│"
18:41 B "│"
18:118 B "│"
19:41 B "│"
19:43 BR "›"
19:45 R "[x] ✓"
19:51 DR "GH"
19:54 BR "github.com"
19:64 DR "  signed in as smorris via gh · 2 orgs"
19:118 B "│"
20:41 B "│"
20:43 B ""
20:49 D "○ GL"
20:54 B "gitlab.work.ca"
20:68 D "  found in your git config, no credentials yet…"
20:118 B "│"
21:41 B "│"
21:118 B "│"
22:41 B "│"
22:43 D "[ Back ]"
22:53 B "[ Continue ⏎ ]"
22:69 D "[ Skip for now · esc ]"
22:118 B "│"
23:41 B "╰────────────────────────────────────────────────────────────────────────────╯"
39:1 B "⏎"
39:2 D " continue"
39:13 B "← →"
39:16 D " buttons"
39:26 B "⌫"
39:27 D " back"
39:34 B "space"
39:39 D " pick"
39:46 B "esc"
39:49 D " skip for now"
